--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/VictorSantos12/HomeFit-2021.2#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.14"
   }
 }
