atualizado user schema

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_URL=http://localhost:3080
 
-MONGO_URL= mongodb+srv://testeMongoCloud:testeMongoCloud@cluster0.zeft3.mongodb.net/testeData?retryWrites=true&w=majority
+
+MONGO_URL= mongodb+srv://equipe-44:ficr-2021@homefit.zeft3.mongodb.net/HomeFit?retryWrites=true&w=majority
